--- a/scss/main.sass
+++ b/scss/main.sass
@@ -2,4 +2,8 @@
 @import 'nav';
 @import 'home';
 @import 'contact';
+@import 'rotation';
+@import 'game-info';
+@import 'background';
 @import 'blackjack';
+@import 'war';
