--- a/css/main.css
+++ b/css/main.css
@@ -1476,10 +1476,6 @@ body {
   color: gold;
 }
 
-.blackjack__main {
-  display: none;
-}
-
 @-webkit-keyframes rotatePhone {
   0% {
     -webkit-transform: rotate(0);
@@ -1528,19 +1524,99 @@ body {
 }
 
 @media only screen and (orientation: landscape) and (min-height: 360px) {
+  .game {
+    position: absolute;
+    top: 11vh;
+    left: 0;
+    height: 89vh;
+    width: 100vw;
+    z-index: 98;
+    font-family: 'Bebas Neue';
+    letter-spacing: 1px;
+    color: rgba(255, 217, 0, 0.7);
+    font-size: .9rem;
+  }
+  .game__saldo {
+    position: absolute;
+    top: 50%;
+    left: 10vw;
+  }
+  .game__saldo span {
+    font-size: 1.2rem;
+    color: orangered;
+  }
+  .game .form {
+    position: absolute;
+    top: 40%;
+    left: 10vw;
+  }
+  .game .form__rate {
+    background: transparent;
+    border: 1px solid rgba(255, 217, 0, 0.7);
+    -webkit-box-shadow: 0 0 2px gold;
+            box-shadow: 0 0 2px gold;
+    font-size: 1rem;
+    color: orangered;
+    width: 65px;
+    padding: .1rem;
+  }
+  .game .form__rate:focus {
+    outline: none;
+    border: 1px solid orangered;
+    -webkit-box-shadow: 0 0 2px orangered;
+            box-shadow: 0 0 2px orangered;
+  }
+  .game__play-btn {
+    position: absolute;
+    top: 55%;
+    left: 45vw;
+    padding: .2rem .6rem;
+    color: rgba(255, 217, 0, 0.7);
+    font-family: 'Bebas Neue';
+    letter-spacing: 1px;
+    font-size: 1.2rem;
+    overflow: hidden;
+    -webkit-transition: .2s;
+    transition: .2s;
+    background: transparent;
+    border: none;
+    -webkit-box-shadow: 0 0 10px orangered, 0 0 40px orangered, 0 0 80px orangered;
+            box-shadow: 0 0 10px orangered, 0 0 40px orangered, 0 0 80px orangered;
+    cursor: pointer;
+  }
+  .game__play-btn:hover {
+    background: orangered;
+    -webkit-box-shadow: 0 0 10px orangered, 0 0 40px orangered, 0 0 80px orangered;
+            box-shadow: 0 0 10px orangered, 0 0 40px orangered, 0 0 80px orangered;
+  }
+  .game .stats {
+    position: absolute;
+    top: 10%;
+    left: 80vw;
+    font-size: .8rem;
+  }
+  .game .stats__text {
+    font-size: .9rem;
+    margin-bottom: 1rem;
+    text-shadow: 0 0 10px orangered, 0 0 30px orangered;
+  }
+  .game .stats span {
+    color: orangered;
+    font-size: 1.1rem;
+  }
+}
+
+@media only screen and (orientation: landscape) and (min-height: 360px) {
   .rotate-container {
     display: none;
   }
-  .blackjack .main {
-    display: block;
-  }
-  .blackjack .main .background {
+  .background {
     height: 89vh;
     max-width: 100vw;
     position: relative;
     overflow: hidden;
   }
-  .blackjack .main .background__table {
+  .background__table {
     position: absolute;
     top: 0;
     left: -10vw;
@@ -1552,7 +1628,7 @@ body {
     border-bottom: 1px solid #666666;
     z-index: 3;
   }
-  .blackjack .main .background__wood {
+  .background__wood {
     position: absolute;
     left: -10vw;
     top: 10%;
@@ -1565,24 +1641,24 @@ body {
     border-bottom: 1px solid #666666;
     z-index: 2;
   }
-  .blackjack .main .background__wood .background__pocket {
+  .background__wood .background__pocket {
     position: absolute;
     bottom: 7%;
     left: 15%;
     -webkit-transform: scale(0.5);
             transform: scale(0.5);
   }
-  .blackjack .main .background__wood .background__pocket--right {
+  .background__wood .background__pocket--right {
     left: 75%;
   }
-  .blackjack .main .background__wood .background__long-pocket {
+  .background__wood .background__long-pocket {
     position: absolute;
     bottom: -4%;
     left: 50%;
     -webkit-transform: translateX(-50%) scale(0.6);
             transform: translateX(-50%) scale(0.6);
   }
-  .blackjack .main .background__lether {
+  .background__lether {
     position: absolute;
     left: -10vw;
     top: 30%;
@@ -1596,7 +1672,7 @@ body {
     -webkit-filter: brightness(2.5);
             filter: brightness(2.5);
   }
-  .blackjack .main .background__carpet {
+  .background__carpet {
     position: absolute;
     top: 0;
     left: 0;
@@ -1605,7 +1681,7 @@ body {
     background-image: url("../images/carpet.jpg");
     background-size: cover;
   }
-  .blackjack .main .background .circles-container {
+  .background .circles-container {
     position: absolute;
     margin: 0 1vw;
     bottom: 0;
@@ -1613,7 +1689,7 @@ body {
     height: 15vh;
     z-index: 99;
   }
-  .blackjack .main .background .circles-container__circle {
+  .background .circles-container__circle {
     position: absolute;
     top: 4.5vh;
     right: 1vh;
@@ -1626,29 +1702,80 @@ body {
     -webkit-transition: .5s;
     transition: .5s;
   }
-  .blackjack .main .background .circles-container__circle--main {
+  .background .circles-container__circle--main {
     top: 2.5vh;
     width: 10vh;
     height: 10vh;
     background-color: grey;
   }
-  .blackjack .main .background .circles-container__circle--green {
+  .background .circles-container__circle--green {
     background-color: green;
   }
-  .blackjack .main .background .circles-container__circle--green-active {
+  .background .circles-container__circle--green-active {
     right: 13vh;
   }
-  .blackjack .main .background .circles-container__circle--red {
+  .background .circles-container__circle--red {
     background-color: #a30101;
   }
-  .blackjack .main .background .circles-container__circle--red-active {
+  .background .circles-container__circle--red-active {
     right: 23vh;
   }
-  .blackjack .main .background .circles-container__circle--blue {
+  .background .circles-container__circle--blue {
     background-color: blue;
   }
-  .blackjack .main .background .circles-container__circle--blue-active {
+  .background .circles-container__circle--blue-active {
     right: 33vh;
+  }
+}
+
+@media only screen and (orientation: landscape) and (min-height: 768px) {
+  .rotate-container {
+    display: none;
+  }
+  .background__wood .background__pocket {
+    bottom: 14%;
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+  .background__wood .background__pocket--right {
+    bottom: 12%;
+  }
+  .background__wood .background__long-pocket {
+    bottom: 2%;
+    -webkit-transform: translateX(-50%) scale(1.2);
+            transform: translateX(-50%) scale(1.2);
+  }
+}
+
+@media only screen and (orientation: landscape) and (min-width: 1440px) {
+  .rotate-container {
+    display: none;
+  }
+  .background__wood .background__pocket {
+    bottom: 14%;
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+  .background__wood .background__pocket--right {
+    bottom: 12%;
+  }
+  .background__wood .background__long-pocket {
+    bottom: 2%;
+    -webkit-transform: translateX(-50%) scale(1.2);
+            transform: translateX(-50%) scale(1.2);
+  }
+}
+
+.blackjack__main {
+  display: none;
+}
+
+@media only screen and (orientation: landscape) and (min-height: 360px) {
+  .rotate-container {
+    display: none;
+  }
+  .blackjack .main {
+    display: block;
   }
   .blackjack .main .game {
     position: absolute;
@@ -1674,7 +1801,7 @@ body {
     border-left: 3px solid white;
   }
   .blackjack .main .game__deck--start {
-    left: 65vw;
+    left: 70vw;
     border: none;
   }
   .blackjack .main .game__saldo {
@@ -1761,6 +1888,24 @@ body {
   .blackjack .main .game .option-btns__btn--pick {
     margin-right: 1rem;
   }
+  .blackjack .main .game__circle-points {
+    position: absolute;
+    top: 20%;
+    left: 30vw;
+    width: 2rem;
+    height: 2rem;
+    border: 2px solid gold;
+    border-radius: 50%;
+    color: orangered;
+  }
+  .blackjack .main .game__circle-points--user {
+    top: 35%;
+  }
+  .blackjack .main .game__circle-points .game__points {
+    text-align: center;
+    line-height: 2rem;
+    font-size: 1.1rem;
+  }
   .blackjack .main .game .stats {
     position: absolute;
     top: 10%;
@@ -1819,6 +1964,42 @@ body {
     bottom: 2%;
     -webkit-transform: translateX(-50%) scale(1.2);
             transform: translateX(-50%) scale(1.2);
+  }
+}
+
+.war__main {
+  display: none;
+}
+
+@media only screen and (orientation: landscape) and (min-height: 360px) {
+  .rotate-container {
+    display: none;
+  }
+  .war .main {
+    display: block;
+  }
+  .war .game__hand {
+    position: absolute;
+    top: 8%;
+    left: 30vw;
+    width: 35px;
+    height: 50px;
+  }
+  .war .game__hand--user {
+    top: 40%;
+    left: 65vw;
+  }
+}
+
+@media only screen and (orientation: landscape) and (min-height: 360px) and (orientation: landscape) and (min-height: 768px) {
+  .war .rotate-container {
+    display: none;
+  }
+}
+
+@media only screen and (orientation: landscape) and (min-height: 360px) and (orientation: landscape) and (min-width: 1440px) {
+  .war .rotate-container {
+    display: none;
   }
 }
 /*# sourceMappingURL=main.css.map */
