--- a/scss/_play-info.scss
+++ b/scss/_play-info.scss
@@ -1,6 +1,6 @@
 @media only screen and (orientation: landscape) and (min-height: 360px) {
 
-    .game {
+    .play {
         position: absolute;
         top: 11vh;
         left: 0;
