--- a/scss/_war.scss
+++ b/scss/_war.scss
@@ -13,7 +13,7 @@
             display: block;
         }
 
-        .game {
+        .play {
 
             &__hand {
                 position: absolute;
