--- a/scss/main.sass
+++ b/scss/main.sass
@@ -3,7 +3,7 @@
 @import 'home';
 @import 'contact';
 @import 'rotation';
-@import 'game-info';
+@import 'play-info';
 @import 'background';
 @import 'blackjack';
 @import 'war';
