Change names of cards images and add event in JS of war subsite

--- a/css/main.css
+++ b/css/main.css
@@ -1860,7 +1860,7 @@ body {
   .blackjack .main .play .option-btns {
     position: absolute;
     top: 50%;
-    left: 50vw;
+    left: 30vw;
     -webkit-transform: translateX(-50%);
             transform: translateX(-50%);
     display: -webkit-box;
@@ -1952,28 +1952,264 @@ body {
   .war .main {
     display: block;
   }
-  .war .play__hand {
+  .war .main .play .points-container {
+    position: absolute;
+    top: 10%;
+    left: 1vw;
+    z-index: 99;
+    display: none;
+  }
+  .war .main .play .points-container__text {
+    margin-bottom: .5rem;
+    font-size: .8rem;
+  }
+  .war .main .play .points-container__text .points-container__points {
+    color: orangered;
+    font-size: 1.1rem;
+  }
+  .war .main .play__hand {
     position: absolute;
     top: 8%;
     left: 30vw;
     width: 35px;
     height: 50px;
+    display: none;
   }
-  .war .play__hand--user {
+  .war .main .play__hand--user {
     top: 40%;
+    left: 65vw;
+  }
+  .war .main .play__active-card {
+    position: absolute;
+    top: 8%;
+    left: 30vw;
+    width: 35px;
+    height: 50px;
+    display: none;
+  }
+  .war .main .play__active-card--user {
+    top: 40%;
+    left: 65vw;
+  }
+  .war .main .play__put-out {
+    position: absolute;
+    top: 50%;
+    left: 35vw;
+    width: 3.5rem;
+    height: 3.5rem;
+    border-radius: 50%;
+    background: rgba(255, 68, 0, 0.6);
+    font-family: 'Bebas Neue';
+    letter-spacing: 1px;
+    color: rgba(255, 217, 0, 0.7);
+    border: 2px solid rgba(255, 217, 0, 0.7);
+    display: none;
+  }
+  .war .main .play__put-out:hover {
+    border: 4px solid rgba(255, 217, 0, 0.7);
+    background: orangered;
+  }
+  .war .main .score-container {
+    position: absolute;
+    left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 99;
+    display: none;
+  }
+  .war .main .score-container__text {
+    text-align: center;
+    line-height: 100vh;
+    font-size: 0rem;
+    font-family: 'Bebas Neue';
+    letter-spacing: 5px;
+    color: gold;
+    text-shadow: 0 0 10px orangered, 0 0 20px orangered, 0 0 40px orangered, 0 0 30px orangered, 0 0 50px orangered;
+  }
+}
+
+@media only screen and (orientation: landscape) and (min-height: 768px) {
+  .rotate-container {
+    display: none;
+  }
+}
+
+@media only screen and (orientation: landscape) and (min-width: 1440px) {
+  .rotate-container {
+    display: none;
+  }
+}
+
+@-webkit-keyframes showComputerActiveCard {
+  0% {
+    left: 30vw;
+  }
+  100% {
+    left: 47.5vw;
+  }
+}
+
+@keyframes showComputerActiveCard {
+  0% {
+    left: 30vw;
+  }
+  100% {
+    left: 47.5vw;
+  }
+}
+
+@-webkit-keyframes showUserActiveCard {
+  0% {
+    left: 65vw;
+  }
+  100% {
+    left: 47.5vw;
+  }
+}
+
+@keyframes showUserActiveCard {
+  0% {
+    left: 65vw;
+  }
+  100% {
+    left: 47.5vw;
+  }
+}
+
+@-webkit-keyframes hideComputerActiveCard {
+  0% {
+    left: 47.5vw;
+  }
+  100% {
+    left: 30vw;
+  }
+}
+
+@keyframes hideComputerActiveCard {
+  0% {
+    left: 47.5vw;
+  }
+  100% {
+    left: 30vw;
+  }
+}
+
+@-webkit-keyframes hideUserActiveCard {
+  0% {
+    left: 47.5vw;
+  }
+  100% {
     left: 65vw;
   }
 }
 
-@media only screen and (orientation: landscape) and (min-height: 360px) and (orientation: landscape) and (min-height: 768px) {
-  .war .rotate-container {
-    display: none;
+@keyframes hideUserActiveCard {
+  0% {
+    left: 47.5vw;
+  }
+  100% {
+    left: 65vw;
   }
 }
 
-@media only screen and (orientation: landscape) and (min-height: 360px) and (orientation: landscape) and (min-width: 1440px) {
-  .war .rotate-container {
-    display: none;
+@-webkit-keyframes hideComputerActiveCardToUser {
+  0% {
+    left: 47.5vw;
+    top: 8%;
+  }
+  100% {
+    left: 65vw;
+    top: 40%;
+  }
+}
+
+@keyframes hideComputerActiveCardToUser {
+  0% {
+    left: 47.5vw;
+    top: 8%;
+  }
+  100% {
+    left: 65vw;
+    top: 40%;
+  }
+}
+
+@-webkit-keyframes hideUserActiveCardToComputer {
+  0% {
+    left: 47.5vw;
+    top: 40%;
+  }
+  100% {
+    left: 30vw;
+    top: 8%;
+  }
+}
+
+@keyframes hideUserActiveCardToComputer {
+  0% {
+    left: 47.5vw;
+    top: 40%;
+  }
+  100% {
+    left: 30vw;
+    top: 8%;
+  }
+}
+
+@-webkit-keyframes blurTable {
+  0%,
+  100% {
+    -webkit-filter: blur(0);
+            filter: blur(0);
+  }
+  1%,
+  99% {
+    -webkit-filter: blur(3px) brightness(30%);
+            filter: blur(3px) brightness(30%);
+  }
+}
+
+@keyframes blurTable {
+  0%,
+  100% {
+    -webkit-filter: blur(0);
+            filter: blur(0);
+  }
+  1%,
+  99% {
+    -webkit-filter: blur(3px) brightness(30%);
+            filter: blur(3px) brightness(30%);
+  }
+}
+
+@-webkit-keyframes growUpFont {
+  0% {
+    font-size: 0;
+  }
+  25% {
+    font-size: 5rem;
+  }
+  75% {
+    font-size: 5rem;
+  }
+  100% {
+    font-size: 0;
+  }
+}
+
+@keyframes growUpFont {
+  0% {
+    font-size: 0;
+  }
+  25% {
+    font-size: 5rem;
+  }
+  75% {
+    font-size: 5rem;
+  }
+  100% {
+    font-size: 0;
   }
 }
 /*# sourceMappingURL=main.css.map */
