--- a/scss/_blackjack.scss
+++ b/scss/_blackjack.scss
@@ -17,7 +17,7 @@
                 top: 11vh;
                 left: 0;
                 height: 89vh;
-                width: 100vw;
+                width: 100%;
                 z-index: 98;
                 font-family: 'Bebas Neue';
                 letter-spacing: 1px;
@@ -27,16 +27,20 @@
                 &__deck {
                     position: absolute;
                     top: 5%;
-                    left: 15vw;
-                    width: 43px;
-                    height: 58px;
+                    left: 15%;
+                    width: 47px;
+                    height: 62px;
                     z-index: 99;
                     padding: 4px;
                     border-top: 3px solid white;
                     border-left: 3px solid white;
 
                     &--start {
-                        left: 70vw;
+                        top: 5%;
+                        padding: 0;
+                        width: 35px;
+                        height: 50px;
+                        left: 70%;
                         border: none;
                     }
                 }
@@ -44,7 +48,7 @@
                 &__saldo {
                     position: absolute;
                     top: 50%;
-                    left: 10vw;
+                    left: 10%;
 
                     span {
                         font-size: 1.2rem;
@@ -55,7 +59,7 @@
                 .form {
                     position: absolute;
                     top: 40%;
-                    left: 10vw;
+                    left: 10%;
 
                     &__rate {
                         background: transparent;
@@ -77,7 +81,7 @@
                 &__play-btn {
                     position: absolute;
                     top: 55%;
-                    left: 45vw;
+                    left: 45%;
                     padding: .2rem .6rem;
                     color: rgba(255, 217, 0, 0.7);
                     font-family: 'Bebas Neue';
@@ -99,9 +103,9 @@
                 .option-btns {
                     position: absolute;
                     top: 50%;
-                    left: 30vw;
+                    left: 45%;
                     transform: translateX(-50%);
-                    display: flex;
+                    display: none;
                     flex-direction: row;
 
                     &__btn {
@@ -127,19 +131,20 @@
 
                 &__circle-points {
                     position: absolute;
-                    top: 20%;
-                    left: 30vw;
+                    top: 5%;
+                    left: 30%;
                     width: 2rem;
                     height: 2rem;
                     border: 2px solid gold;
                     border-radius: 50%;
                     color: orangered;
+                    display: none;
 
                     &--user {
                         top: 35%;
                     }
 
-                    .game__points {
+                    .play__points {
                         text-align: center;
                         line-height: 2rem;
                         font-size: 1.1rem;
@@ -149,7 +154,7 @@
                 .stats {
                     position: absolute;
                     top: 10%;
-                    left: 80vw;
+                    left: 80%;
                     font-size: .8rem;
 
                     &__text {
@@ -163,6 +168,15 @@
                         font-size: 1.1rem;
                     }
                 }
+
+                &__active-card {
+                    position: absolute;
+                    width: 35px;
+                    height: 50px;
+                    top: 5%;
+                    left: 70%;
+                }
+
             }
         }
     }
