Add subiste Baccarat and modify another games

--- a/scss/_nav.scss
+++ b/scss/_nav.scss
@@ -4,7 +4,7 @@
     position: fixed;
     left: -30vw;
     z-index: 99;
-    transition: .75px;
+    transition: .75s;
     overflow: auto;
     background-color: rgb(34, 34, 34);
 
